feat: add auth and registration
